content-styles.css
:root {
    --color-palette-tan: #ECCE8E;
    --color-palette-blue: #84ACCE;
    --color-palette-purple: #827191;
    --color-palette-maroon: #7D1D3F;
    --color-palette-green: #136F63;
}

.invisible-button {
    border: 2px solid red;
    position: absolute;
    height: 35px;
    z-index: 999;
    bottom: 7px;
    right: 15px;
    width: 88px;
}

.empty-backer-box {
    background: black;
    height: 100px;
    position: relative;
    top: 130px;
    /* good for when body is just title and icon */

    /* top: 180px;  /* good for when buttons are included in body */
    /* border-radius: 20px; */
}

.TwistApp {
    max-width: 100%;
    position: relative;
    /* top: 12px; */

    padding: 10px;
    background: var(--color-palette-tan);
    border-radius: 20px 20px 0px 0px;
    /* border-radius: 20px; */
    z-index: 9999;

    color: black;
    font-family: Arial, sans-serif;
    text-align: center;
}

.TwistApp-header {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.TwistApp h1 {
    margin: 8px 0;
    font-size: 16px;
    font-family: inherit;
}

.TwistApp p {
    margin: 8px 0;
    font-family: inherit;
}

/* .icon-button {
    color: var(--color-palette-purple);
} */

.TwistApp .buttons-box {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.TwistApp .action_btn {
    color: white;
    border: 0;
    padding: 10px;
    border-radius: 5px;
}

.TwistApp .action_btn.submit {
    background: var(--color-palette-green);
}

.TwistApp .action_btn.cancel {
    background: var(--color-palette-maroon);
}

.TwistApp .info {
    height: 30px;
    width: 30px;
}

